Solution to AirBnB Clone Web Static - Task 0 to Task 7

--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -6,6 +6,7 @@
         border: 1px solid #dddddd;
         border-radius: 4px;
         position: relative;
+        box-sizing: border-box;
 }
 
 /* Styling for the Section button to Search */
