--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -32,7 +32,7 @@ section.filters button:hover {
         display: inline-block;
         position: relative;
         height: 100%;
-        width: 25%;
+        min-width: 25%;
         margin: 0;
 }
 .filters .locations {
