--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -31,7 +31,7 @@ section.filters button:hover {
 	display: inline-block;
 	position: relative;
 	height: 100%;
-	width: 25%;
+	min-width: 25%;
 	margin: 0;
 	border-radius: 4px;
 }
